Updated DA 9 (footnotes added) and DA 12.

--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -1,160 +1,223 @@
 ---
 layout: default
-title: The Long Discourses | 12. Three Categories
+title: 'The Long Discourses | 12. Three Categories'
 type: kramdown
 base: ../../
 previous: DA_11.html
 next: DA_13.html
 ---
 
-# [The Long Discourses](index.html)
-## 12. Three Categories
+<h1><a href='index.html'>The Long Discourses</a></h1>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.
-{:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I will give all of you a discourse on the sublime teaching, the content and expression of which is pure and perfects the religious life. It’s the teaching in three categories. All of you, listen closely and consider it. I will teach this for you.”
-{:#p2}
+<table class="trans">
+  <th class='ch'>（一二）第二分三聚經第八</th>
+  <th class='en'>12. Three Categories</th>
+  <tr>
+    <td class='ch' title='t1.1.59b11'>佛說長阿含經卷第十</td>
+    <td class="fasc_heading">Fascicle 10 of the <em>Long Discourses of the Buddha</em></td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b13'>後秦弘始年佛陀耶舍共竺佛念譯</td>
+    <td class="taisho_byline">Translated by Buddhayaśas and Chu Fo-nian during the reign of Wen Huan of the Later Qin (399-416)</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b15'>如是我聞： 一時，佛在舍衛國、祇樹、給孤獨園。 與大比丘眾千二百五十人俱。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b16'>爾時，世尊告諸比丘： 「我與汝等說微妙法，義味清淨，梵行具足，謂三聚法。 汝等諦聽，思惟，念之！ 當為汝說。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I will give all of you a teaching of the sublime Dharma, the content and expression of which are pure and perfect the religious life. It’s called the Dharma in three categories. All of you, listen closely, consider, and remember it! I will teach this for you.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b19'>時，諸比丘受教而聽。</td>
+    <td>The monks then accepted the teaching and listened.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b19'>佛告比丘： 「三法聚者，一法趣惡趣，一法趣善趣，一法趣涅槃。</td>
+    <td id='p3'>3. The Buddha addressed the monks, “Regarding these three categories, there’s one thing that leads to bad destinies, one thing that leads to good destinies,<sup id="ref2"><a href="#n2">2</a></sup> and one thing that leads to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b21'>「云何一法趣于惡趣？ 謂無仁慈，懷毒害心。 是謂一法將向惡趣。</td>
+    <td id='p4'>4. “What’s one thing that leads to bad destinies? It’s harboring harmful thoughts without kindness. This is one thing that leads to bad destinies.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b22'>「云何一法趣于善趣？ 謂不以惡心加於眾生。 是為一法將向善趣。</td>
+    <td id='p5'>5. “What’s one thing that leads to good destinies? It’s not treating sentient beings with bad intent. This is one thing that leads to good destinies.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b24'>「云何一法趣于涅槃？ 謂能精勤修身念處。 是為一法將向涅槃。</td>
+    <td id='p6'>6. “What’s one thing that leads to <em>nirvāṇa</em>? It’s making effort to cultivate the abodes of mindfulness. This is one thing that leads to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b25'>「復有二法趣向惡趣，復有二法趣向善趣，復有二法趣向涅槃。</td>
+    <td id='p7'>7. “Again, there are two things that lead to bad destinies, two things that lead to good destinies, and two things that lead to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b27'>「云何二法趣向惡趣？ 一謂毀戒，二謂破見。</td>
+    <td id='p8'>8. “What are two things that lead to bad destinies? The first is violating the precepts, and the second is breaking [right] view.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b28'>「云何二法趣向善趣？ 一謂戒具，二謂見具。</td>
+    <td id='p9'>9. “What are two things that lead to good destinies? The first is perfecting the precepts, and the second is perfecting [right] view.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59b29'>「云何二法趣向涅槃？ 一謂為止，二謂為觀。</td>
+    <td id='p10'>10. “What are two things that lead to <em>nirvāṇa</em>? The first is calmness, and the second in contemplation.<sup id="ref3"><a href="#n3">3</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c1'>「復有三法趣向惡趣，三法向善趣，三法向涅槃。</td>
+    <td id='p11'>11. “Again, there are three things that lead to bad destinies, three things that lead to good destinies, and three things that lead to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c2'>「云何三法向惡趣？ 謂三不善根： 貪不善根、恚不善根、癡不善根。</td>
+    <td id='p12'>12. “What are three things that lead to bad destinies? They are the three roots of unskillfulness: The unskillful root of greed, unskillful root of anger, and unskillful root of delusion.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c3'>「云何三法向善趣？ 謂三善根： 無貪善根、無恚善根、無癡善根。</td>
+    <td id='p13'>13. “What are three things that lead to good destinies? They are the three roots of skillfulness: The skillful root of having no greed, skillful root of having no anger, and skillful root of having no delusion.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c5'>「云何三法趣向涅槃？ 謂三三昧： 空三昧、無相三昧、無作三昧。</td>
+    <td id='p14'>14. “What are three things that lead to <em>nirvāṇa</em>? They are the three <em>samādhi</em>s: The <em>samādhi</em> of emptiness, the <em>samādhi</em> of no signs, and the <em>samādhi</em> of no actions.<sup id="ref4"><a href="#n4">4</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c6'>「又有四法趣向惡趣，四法向善趣，四法向涅槃。</td>
+    <td id='p15'>15. “Again, there are four things that lead to bad destinies, four things that lead to good destinies, and four things that lead to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c7'>「云何四法向惡趣？ 謂愛語、恚語、怖語、癡語。</td>
+    <td id='p16'>16. “What are four things that lead to bad destinies? They are craving speech, angry speech, fearful speech, and deluded speech.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c8'>「云何四法向善趣？ 謂不愛語、不恚語、不怖語、不癡語。</td>
+    <td id='p17'>17. “What are four things that lead to good destinies? Speech without craving, speech without anger, speech without fear, and speech without delusion.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c9'>「云何四法向涅槃？ 謂四念處： 身念處、受念處、意念處、法念處。</td>
+    <td id='p18'>18. “What are four things that lead to <em>nirvāṇa</em>? They are the four abodes of mindfulness: The mindful abode of the body, mindful abode of feelings, mindful abode of mind, and mindful abode of teachings.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c11'>「復有五法向惡趣，五法向善趣，五法向涅槃。</td>
+    <td id='p19'>19. “Again, there are five things that lead to bad destinies, five things that lead to good destinies, and five things that lead to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c12'>「云何五法向惡趣？ 謂破五戒： 殺、盜、婬逸、妄語、飲酒。</td>
+    <td id='p20'>20. “What are five things that lead to bad destinies? They are breaking the five precepts: killing, stealing, adultery,<sup id="ref5"><a href="#n5">5</a></sup> lying, and drinking alcohol.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c13'>「云何五法向善趣？ 謂持五戒： 不殺、不盜、不婬、不欺、不飲酒。</td>
+    <td id='p21'>21. “What are five things that lead to good destinies? They are observing the five precepts: Not killing, not stealing, not committing adultery, not being deceptive, and not drinking alcohol.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c14'>「云何五法趣向涅槃？ 謂五根： 信根、精進根、念根、定根、慧根。</td>
+    <td id='p22'>22. “What are five things that lead to <em>nirvāṇa</em>? They are the five faculties: the faculty of faith, faculty of effort, faculty of mindfulness, faculty of <em>samādhi</em>, and faculty of wisdom.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c15'>「又有六法向惡趣，六法向善趣，六法向涅槃。</td>
+    <td id='p23'>23. “Again, there are six things that lead to bad destinies, six things that lead to good destinies, and six things that lead to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c17'>「云何六法向惡趣？ 謂六不敬： 不敬佛、不敬法、不敬僧、不敬戒、不敬定、不敬父母。</td>
+    <td id='p24'>24. “What are six things that lead to bad destinies? They are the six disrespects: Disrespecting the Buddha, disrespecting the Dharma, disrespecting the Saṅgha, disrespecting the precepts, disrespecting <em>samādhi</em>, and disrespecting father and mother.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c18'>「云何六法向善趣？ 謂六敬法： 敬佛、敬法、敬僧、敬戒、敬定、敬父母。</td>
+    <td id='p25'>25. “What are six things that lead to good destinies? They are the six respects: Respecting the Buddha, respecting the Dharma, respecting the Saṅgha, respecting the precepts, respecting <em>samādhi</em>, and respecting father and mother.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c20'>「云何六法向涅槃？ 謂六思念： 念佛、念法、念僧、念戒、念施、念天。</td>
+    <td id='p26'>26. “What are six things that lead to <em>nirvāṇa</em>? They are the six recollections: Recollecting the Buddha, recollecting the Dharma, recollecting the Saṅgha, recollecting the precepts, recollecting generosity, and recollecting the gods.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c21'>「又有七法向惡趣，七法向善趣，七法向涅槃。</td>
+    <td id='p27'>27. “Again, there are seven things that lead to bad destinies, seven things that lead to good destinies, and seven things that lead to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c22'>「云何七法向惡趣？ 謂殺生、不與取、婬逸、妄語、兩舌、惡口、綺語。</td>
+    <td id='p28'>28. “What are seven things that lead to bad destinies? They are killing beings, taking what’s not given, adultery, lying, divisive speech, harsh speech, and flattery.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c24'>「云何七法向善趣？ 謂不殺生、不盜、不婬、不欺、不兩舌、不惡口、不綺語。</td>
+    <td id='p29'>29. “What are seven things that lead to good destinies? Not killing beings, not stealing, not committing adultery, not being deceptive, not speaking divisively, not speaking harshly, and not being flattering.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c25'>「云何七法向涅槃？ 謂七覺意： 念覺意、擇法覺意、精進覺意、猗覺意、定覺意、喜覺意、捨覺意。</td>
+    <td id='p30'>30. “What are seven things that lead to <em>nirvāṇa</em>? They are the seven factors of awakening: The awakening factor of mindfulness, awakening factor of analyzing the teachings, awakening factor of effort, awakening factor of calm, awakening factor of <em>samādhi</em>, awakening factor of joy, and awakening factor of equanimity.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c27'>「又有八法向惡趣，八法向善趣，八法向涅槃。</td>
+    <td id='p31'>31. “Again, there are eight things that lead to bad destinies, eight things that lead to good destinies, and eight things that lead to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.59c28'>「云何八法向惡趣？ 謂八邪行： 邪見、邪志、邪語、邪業、邪命、邪方便、邪念、邪定。</td>
+    <td id='p32'>32. “What are eight things that lead to bad destinies? They are the eight wrong practices: wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong <em>samādhi</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a1'>「云何八法向善趣？ 謂世正見： 正志、正語、正業、正命、正方便、正念、正定。</td>
+    <td id='p33'>33. “What are eight things that lead to good destinies? They are the mundane right practices: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right <em>samādhi</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a3'>「云何八法向涅槃？ 謂八賢聖道： 正見、正志、正語、正業、正命、正方便、正念、正定。</td>
+    <td id='p34'>34. “What are eight things that lead to <em>nirvāṇa</em>? They are the noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right <em>samādhi</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a4'>「又有九法向惡趣，九法向善趣，九法向涅槃。</td>
+    <td id='p35'>35. “Again, there are nine things that lead to bad destinies, nine things that lead to good destinies, and nine things that lead to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a5'>「云何九法向惡趣？ 謂九惱： 『有人已侵惱我，今侵惱我，當侵惱我。』 『我所愛者已侵惱，今侵惱，當侵惱。』 『我所憎者已愛敬，今愛敬，當愛敬。』</td>
+    <td id='p36'>36. “What are nine things that lead to bad destinies? They are the nine troubles: [1-3] ‘Someone has harassed me, is harassing me, and will harass me.’ [4-6] ‘My loved ones have been harassed, are being harassed, and will be harassed.’ [7-9] ‘My enemies have been respected, are being respected, and will be respected.’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a8'>「云何九法向善趣？ 謂九無惱： 『彼已侵我，我惱何益？已不生惱，今不生惱，當不生惱。』 『我所愛者，彼已侵惱，我惱何益？已不生惱，今不生惱，當不生惱。』 『我所憎者，彼已愛敬，我惱何益？已不生惱，當不生惱，今不生惱。』</td>
+    <td id='p37'>37. “What are nine things that lead to good destinies? They are the nine non-troubles: [1-3] ‘What good is there to my being troubled by others who harass me? The past won’t trouble me, the present won’t trouble me, and the future won’t trouble me.’ [4-6] ‘What good is there to my being troubled about my loved ones being harassed? The past won’t trouble me, the present won’t trouble me, and the future won’t trouble me.’ [7-9] ‘What good is there to my being troubled about my enemies being respected? The past won’t trouble me, the present won’t trouble me, and the future won’t trouble me.’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a13'>「云何九法向涅槃？ 謂九善法： 一喜，二愛，三悅，四樂，五定，六實知，七除捨，八無欲，九解脫。</td>
+    <td id='p38'>38. “What are nine things that lead to <em>nirvāṇa</em>? They are these nine good things:<sup id="ref6"><a href="#n6">6</a></sup> First is joyfulness, second is affection, third is delight, fourth is happiness, fifth is <em>samādhi</em>, sixth is really knowing, seventh is indifference, eighth is being desireless, and ninth is freedom.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a15'>「又有十法向惡趣，十法向善趣，十法向涅槃。</td>
+    <td id='p39'>39. “Again, there are ten things that lead to bad destinies, ten things that lead to good destinies, and ten things that lead to <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a16'>「云何十法向惡趣？ 謂十不善： 身殺、盜、婬，口兩舌、惡罵、妄言、綺語，意貪取、嫉妬、邪見。</td>
+    <td id='p40'>40. “What are ten things that lead to bad destinies? They are the ten unskillful [actions]: Physically killing, stealing, and committing adultery, verbally being divisive, abusive, lying, and flattering, and mentally being covetous, jealous, and having wrong views.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a18'>「云何十法向善趣？ 謂十善行： 身不殺、盜、婬，口不兩舌、惡罵、妄言、綺語，意不貪取、嫉妬、邪見。</td>
+    <td id='p41'>41. “What are ten things that lead to good destinies? They are the ten skillful actions: Physically not killing, stealing, or committing adultery, verbally not being divisive, abusive, lying, or flattering, and mentally not being covetous, jealous, or having wrong views.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a20'>「云何十法向涅槃？ 謂十直道： 正見、正志、正語、正業、正命、正方便、正念、正定、正解脫、正智。</td>
+    <td id='p42'>42. “What are ten things that lead to <em>nirvāṇa</em>? They are the ten straight paths: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, right <em>samādhi</em>, right liberation, and right knowledge.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a22'>「諸比丘，如是十法得至涅槃。 是名三聚微妙正法。 我為如來、為眾弟子所應作者，無不周備。 憂念汝等，故演經道。 汝等亦宜自憂其身，當處閑居、樹下思惟。 勿為懈怠! 今不勉力，後悔無益。」</td>
+    <td id='p43'>43. “Monks, thus are the ten things that make arriving at <em>nirvāṇa</em> possible. This is called the sublime and correct teaching in three categories. Being the Tathāgata, I’ve provided you with all that I should. Having pity for you, I’ve lectured on the <em>sūtra</em>s and the path. You should also have pity for yourselves, go to a quiet place under a tree or in an empty dwelling, and contemplate. Don’t be lazy! You’ll gain nothing by not exerting yourselves today and regretting it later.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t1.1.60a27'>諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p44'>44. The monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-The monks then accepted the teaching and listened.
+<hr/>
 
-3\. The Buddha addressed the monks, “These three categories are one thing that leads to bad destinies, one thing that leads to good destinies, and one thing that leads to <em>nirvāṇa</em>.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “What’s one thing that leads to bad destinies? It’s the absence of kindness that harbors harmful thoughts. This is one thing that leads to bad destinies.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>This is <em>sūtra</em> no. 12 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0059b14" target="_blank">T1.1.57b25-60a27</a>). It does not appear to have an extant parallel. The basic concept behind the three categories is similar to the rubric found in EBTs like <a href="../samyukta/13/SA13_75.html" target="_blank">SĀ 13.75 (785)</a>, <a href="https://suttacentral.net/ma189" target="_blank">MĀ 189</a>, and <a href="https://suttacentral.net/mn117" target="_blank">MN 117</a>. These texts divide the “right path” into mundane and supermundane types, which we will see here as well when the eightfold path is listed. This same principle is expressed in terms of rebirth throughout this <em>sūtra</em>. I.e., the mundane good leads to birth in a good destination, while the supermundane good brings an end to rebirth (<em>nirvāṇa</em>). [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>bad destinies … good destinies.</em> C. <span class="ch">惡趣</span> … <span class="ch">善趣</span>, P. <em>duggati … sugati</em>, S. <em>durgati … sugati</em>. Bad destinies refers to rebirth in Hell, among animals, or hungry ghosts. Good destinies refers to rebirth as humans on Earth or gods in the heavens. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>calmness … contemplation.</em> C. <span class="ch">止</span> … <span class="ch">觀</span>, P. <em>samatha … vipassanā</em>, S. <em>śamatha … vipaśyanā</em>. These were two categories of meditative practices. Calming meditation had the goal of pacifying the mind, emotions, and body, while contemplation meditation consisted of analytical or contemplative exercises. However, while meditative practices could be categorized into one or the other way, they are generally considered complementary to each other and practiced together. One might practice a calming exercise to get into the frame of mind needed for a contemplative exercise. Here, we see the two treated as separate categories. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p>For more about these three types of <em>samādhi</em>, see the notes to <a href="DA_9.html#n4" target="_blank">DĀ 9</a> on the subject. [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>adultery</em>. C. <span class="ch">婬逸</span>. The C. term here literally means sexual copulation, but I assume the five precepts refer to those observed by laypeople, which do not prohibit sex between a married couple. However, if these precepts had renunciates in mind, then it would mean any kind of sexual act because they were expected to be celibate. This is also true for the passages below that list engaging in sex as a precept. [<a href="#ref5">back</a>]</p></li>
+<li id="n6"><p><em>these nine good things</em>. C. <span class="ch">九善法</span>. This list also occurs in <a href="DA_10.html#p123" target="_blank">DĀ 10</a> and <a href="DA_11.html#p57" target="_blank">DĀ 11</a>, but there it’s called the nine sources of joy (<span class="ch">九喜本</span>). This list, however, doesn’t occur in <a href="https://suttacentral.net/dn34" target="_blank">DN 34</a>. [<a href="#ref6">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “What’s one thing that leads to good destinies? It’s not inflicting bad intent on sentient beings. This is one thing that leads to good destinies.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 22 August 2025</p>
 
-6\. “What’s one thing that leads to <em>nirvāṇa</em>? It’s making effort to cultivate the abodes of mindfulness. This is one thing that leads to <em>nirvāṇa</em>.
-{:#p6}
-
-7\. “Again, there are two things that lead to bad destinies, two things that lead to good destinies, and two things that lead to <em>nirvāṇa</em>.
-{:#p7}
-
-8\. “What are two things that lead to bad destinies? One is violating the precepts, and the second is breaking [right] view.
-{:#p8}
-
-9\. “What are two things that lead to good destinies? One is perfecting the precepts, and the second is perfecting [right] view.
-{:#p9}
-
-10\. “What are two things that lead to <em>nirvāṇa</em>? One is calmness, and the second in contemplation.
-{:#p10}
-
-11\. “Again, there are three things that lead to bad destinies, three things that lead to good destinies, and three things that lead to <em>nirvāṇa</em>.
-{:#p11}
-
-12\. “What are three things that lead to bad destinies? They are the three unskillful roots: The unskillful root of greed, unskillful root of anger, and unskillful root of delusion.
-{:#p12}
-
-13\. “What are three things that lead to good destinies? They are the three skillful roots: The skillful root of having no greed, skillful root of having no anger, and skillful root of having no delusion.
-{:#p13}
-
-14\. “What are three things that lead to <em>nirvāṇa</em>? They are the three samādhis: The samādhi of emptiness, the samādhi of no appearances, and the samādhi of no action.
-{:#p14}
-
-15\. “Again, there are four things that lead to bad destinies, four things that lead to good destinies, and four things that lead to <em>nirvāṇa</em>.
-{:#p15}
-
-16\. “What are four things that lead to bad destinies? They are lustful speech, angry speech, fearful speech, and deluded speech.
-{:#p16}
-
-17\. “What are four things that lead to good destinies? Speech without lust, speech without anger, speech without fear, and speech without delusion.
-{:#p17}
-
-18\. “What are four things that lead to <em>nirvāṇa</em>? The mindful abode of body, mindful abode of feelings, mindful abode of mind, and mindful abode of teachings.
-{:#p18}
-
-19\. “Again, there are five things that lead to bad destinies, five things that lead to good destinies, and five things that lead to <em>nirvāṇa</em>.
-{:#p19}
-
-20\. “What are five things that lead to bad destinies? They are breaking the five precepts: killing, stealing, adultery, lying, and drinking alcohol.
-{:#p20}
-
-21\. “What are five things that lead to good destinies? They are observing the five precepts: Not killing, not stealing, not committing adultery, not being deceptive, and not drinking alcohol.
-{:#p21}
-
-22\. “What are five things that lead to <em>nirvāṇa</em>? They are the five faculties: the faculty of faith, faculty of effort, faculty of mindfulness, faculty of samādhi, and faculty of wisdom.
-{:#p22}
-
-23\. “Again, there are six things that lead to bad destinies, six things that lead to good destinies, and six things that lead to <em>nirvāṇa</em>.
-{:#p23}
-
-24\. “What are six things that lead to bad destinies? They are the six disrespects: Disrespecting the Buddha, disrespecting the Dharma, disrespecting the Saṅgha, disrespecting the precepts, disrespecting samādhi, and disrespecting father and mother.
-{:#p24}
-
-25\. “What are six things that lead to good destinies? They are the six respects: Respecting the Buddha, respecting the Dharma, respecting the Saṅgha, respecting the precepts, respecting samādhi, and respecting father and mother.
-{:#p25}
-
-26\. “What are six things that lead to <em>nirvāṇa</em>? They are the six recollections: Recollecting the Buddha, recollecting the Dharma, recollecting the Saṅgha, recollecting generosity, and recollecting the gods.
-{:#p26}
-
-27\. “Again, there are seven things that lead to bad destinies, seven things that lead to good destinies, and seven things that lead to <em>nirvāṇa</em>.
-{:#p27}
-
-28\. “What are seven things that lead to bad destinies? They are killing beings, taking what’s not given, adultery, lying, divisiveness, harsh speech, and flattery.
-{:#p28}
-
-29\. “What are seven things that lead to good destinies? Not killing beings, not stealing, not committing adultery, not being deceptive, not being divisive, not speaking harshly, and not flattering.
-{:#p29}
-
-30\. “What are seven things that lead to <em>nirvāṇa</em>? They are the seven awakenings: The awakening of mindfulness, awakening of discriminating teachings, awakening of effort, awakening of mildness, awakening of samādhi, awakening of joy, and awakening of equanimity.
-{:#p30}
-
-31\. “Again, there are eight things that lead to bad destinies, eight things that lead to good destinies, and eight things that lead to <em>nirvāṇa</em>.
-{:#p31}
-
-32\. “What are eight things that lead to bad destinies? They are the eight wrong practices: wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong samādhi.
-{:#p32}
-
-33\. “What are eight things that lead to good destinies? They are the mundane right practices: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
-{:#p33}
-
-34\. “What are eight things that lead to <em>nirvāṇa</em>? They are the noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
-{:#p34}
-
-35\. “Again, there are nine things that lead to bad destinies, nine things that lead to good destinies, and nine things that lead to <em>nirvāṇa</em>.
-{:#p35}
-
-36\. “What are nine things that lead to bad destinies? ‘Someone has harassed me, is harassing me, and will harass me.’ ‘My loved ones have been harassed, are being harassed, and will be harassed.’ ‘My enemies have been respected, are being respected, and will be respected.’
-{:#p36}
-
-37\. “What are nine things that lead to good destinies? ‘What good is there to my being troubled by others who harass me? The past won’t trouble me, the present won’t trouble me, and the future won’t trouble me.’ ‘What good is there to my being troubled about my loved ones being harassed? The past won’t trouble me, the present won’t trouble me, and the future won’t trouble me.’ ‘What good is there to my being troubled about my enemies being respected? The past won’t trouble me, the present won’t trouble me, and the future won’t trouble me.’
-{:#p37}
-
-38\. “What are nine things that lead to <em>nirvāṇa</em>? They are the nine good qualities: 1) joy, 2) love, 3) delight, 4) pleasure, 5) samādhi, 6) real knowledge, 7) indifference, 8) being without desire, and 9) liberation.
-{:#p38}
-
-39\. “Again, there are ten things that lead to bad destinies, ten things that lead to good destinies, and ten things that lead to <em>nirvāṇa</em>.
-{:#p39}
-
-40\. “What are ten things that lead to bad destinies? They are the ten unskillful [actions]: Physically killing, stealing, and committing adultery, verbally being divisive, abusive, lying, and flattering, and mentally being covetous, jealous, and having wrong views.
-{:#p40}
-
-41\. “What are ten things that lead to good destinies? They are the ten skillful actions: Physically not killing, stealing, or committing adultery, verbally not being divisive, abusive, lying, or flattering, and mentally not being covetous, jealous, or having wrong views.
-{:#p41}
-
-42\. “What are ten things that lead to <em>nirvāṇa</em>? They are the ten straight paths: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, right samādhi, right liberation, and right knowledge.
-{:#p42}
-
-43\. “Monks, thus are the ten things that make arriving at <em>nirvāṇa</em> possible. This is called the sublime and correct teaching in three categories. I’m the Tathāgata; I’ve provided all that I should for you. Taking pity on you, I’ve lectured on the sutras and the path. You should also take pity on yourselves and go to a quiet place under a tree or in an empty dwelling to contemplate. Don’t be negligent. Nothing’s gained by not exerting yourselves today and regretting it later.”
-{:#p43}
-
-44\. The monks who heard what the Buddha taught rejoiced and approved.
-{:#p44}
-
----
-
-### Notes
-
-1. {:#n1}This is <em>sūtra</em> no. 12 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0059b14" target="_blank">T1.1.59b14-60a27</a>). [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 9 June 2022
-{: .revised}
-
----
+<hr/>
